<resources>
    <string name="app_name">FitTracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="savebtn_text">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="contactus">
        Better Fitness 2020 Inc.\n
				5555 Main St. (suite 101)\n
				Toronto, ON\n
				M5M 5M5\n
				tel.: (416)555-5555\n
				email: fitness@somewhere.com\n
				url: http://www.senecacollege.ca
</string>
    <string name="contact">Contact Us</string>
    <string name="about_text">This is Fitness Tracker App </string>
    <string name="bmi_result">BMI RESULT</string>

    <string name="save_animation">Calculating BMI......</string>

    <string name="delete">Delete</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pressure_text">Pressure</string>
    <string name="humidity_text">Humidity</string>
    <string name="refresh_text">Refresh</string>
    <string name="settings_text">Settings</string>
    <string name="unit_text">Unit</string>
    <string name="fittracker_saving_text">Fittracker Saving...</string>
    <string name="calculate_text">Calculate</string>
    <string name="walking_text">Walking</string>
    <string name="running_text">Running</string>
    <string name="cycling_text">Cycling</string>
    <string name="challenge_text">Challenge</string>
    <string name="weight_text">Weight</string>
    <string name="metric_text">Metric</string>
    <string name="imperial_text">Imperial</string>
    <string name="welcome_to_fit_tracker">Welcome to Fit Tracker</string>
    <string name="chart_text">Chart</string>
    <string name="add_text">Add</string>
    <string name="exit_text">exit</string>
</resources>