<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/fab_margin"
    tools:context=".SettingsFragment">

    <LinearLayout
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:text="@string/settings_text"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:textColor="@color/DodgerBlue" />
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:text="@string/unit_text"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size"
        android:layout_width="@dimen/textview_size"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/rg_unit"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/radio_metric"
            android:layout_weight="1"
            android:textSize="@dimen/text_size"
            android:text="@string/metric_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:layout_weight="1"
            android:id="@+id/radio_imperial"
            android:textSize="@dimen/text_size"
            android:text="@string/imperial_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
            <TextView
                android:id="@+id/unit_weight"
                android:text="@string/weight_text"
                android:textSize="@dimen/text_size"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/body_weight"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="20dp"
                />

     </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/unit_challenge"
            android:text="@string/challenge_text"
            android:textSize="@dimen/text_size"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/text_challenge"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="20dp" />
    </LinearLayout>
    <Button
        android:id="@+id/save"
        android:layout_marginTop="10dp"
        android:textColor="@color/White"
        android:background="@color/DodgerBlue"
        android:text="Save"
        android:textSize="@dimen/text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>

</FrameLayout>