<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:background="@color/White"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <Button
        android:id="@+id/btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:drawableLeft="@drawable/calendar"
        />
        <TextView
            android:id="@+id/tv_date"
            android:textSize="20dp"
            android:layout_marginLeft="16dp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="16dp"
        android:background="@color/DodgerBlue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioGroup
            android:id="@+id/radiogroup"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:textSize="@dimen/text_size"
            android:layout_height="wrap_content">
        <RadioButton
            android:textColor="@color/White"
            android:text="@string/walking_text"
            android:id="@+id/rd_walking"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/text_size"
            android:layout_height="wrap_content" />
        <RadioButton
            android:textColor="@color/White"
            android:text="@string/running_text"
            android:id="@+id/rd_running"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/text_size"
            android:layout_height="wrap_content" />
        <RadioButton
            android:textColor="@color/White"
            android:text="@string/cycling_text"
            android:id="@+id/rd_cycling"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/text_size"
            android:layout_height="wrap_content" />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ImageView
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_gravity="center_horizontal|center_vertical"
        app:srcCompat="@drawable/distance" />
        <TextView
            android:id="@+id/unit_distance"
            android:text="Km"
            android:textSize="20dp"
            android:paddingLeft="5dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="distance" />
    </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center_horizontal|center_vertical"
            app:srcCompat="@drawable/timer" />
        <TextView
            android:id="@+id/unit_duration"
            android:text="Min."
            android:textSize="20dp"
            android:paddingLeft="5dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_duration"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="duration" />
    </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center_horizontal|center_vertical"
            app:srcCompat="@drawable/calorie" />
        <TextView
            android:id="@+id/unit_calorie"
            android:text="Cals"
            android:textSize="20dp"
            android:paddingLeft="5dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_calorie"
            android:textSize="20dp"
            android:paddingLeft="5dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_memo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="memo" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/DodgerBlue"
        android:textColor="@color/White"
        android:text="save"
        android:layout_gravity="center"
        android:textSize="20dp"
        />
</LinearLayout>